[package]
authors = [
  "Marko Mijalkovic <marko.mijalkovic97@gmail.com>",
  "Boscop",
  "Alex Zywicki <alexander.zywicki@gmail.com>",
  "doomy <alexander@resamplr.com>",
  "Ms2ger",
  "Rob Saunders",
  "David Lu",
  "Aske Simon Christensen",
  "kykc",
  "Jordan Earls",
  "xnor104",
  "Nathaniel Theis",
  "Colin Wallace",
  "Henrik Nordvik",
  "Charles Saracco",
  "Frederik Halkjær",
]
name = "vst"
version = "0.2.1"

description = "VST 2.4 API implementation in rust. Create plugins or hosts."

readme = "README.md"
repository = "https://github.com/rustaudio/vst-rs"

keywords = ["vst", "vst2", "plugin"]
license = "MIT"

autoexamples = false

[dependencies]
bitflags = "1"
libc = "0.2"
libloading = "0.6.5"
log = "0.4"
num-traits = "0.2"
parking_lot = "0.11.1"

[dev-dependencies]
rand = "0.7"
time = "0.2.23"

[[example]]
crate-type = ["cdylib"]
name = "dimension_expander"

[[example]]
crate-type = ["bin"]
name = "simple_host"

[[example]]
crate-type = ["cdylib"]
name = "sine_synth"

[[example]]
crate-type = ["cdylib"]
name = "fwd_midi"

[[example]]
crate-type = ["cdylib"]
name = "gain_effect"

[[example]]
crate-type = ["cdylib"]
name = "transfer_and_smooth"

[[example]]
crate-type = ["cdylib"]
name = "ladder_filter"
